[project]
name = "rc-connectivity-check"
version = "0.1.9"
description = "Tool to check connectivity to RevenueCat services"
authors = [{ name = "Guillermo Perez", email = "bisho@revenuecat.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.32.3,<3",
    "colorama>=0.4.6,<0.5",
]

[project.scripts]
rc-connectivity-check = "rc_connectivity_check.checker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
